force-app/main/default/objects/LT_Driver_Penalty__c/LT_Driver_Penalty__c.object-meta.xml
<CustomObject>
    <description>Penalizacao de Motorista - LogiTrack Operations 360.</description>
    <label>Penalizacao de Motorista</label>
    <nameField>
        <displayFormat>PEN-{000000}</displayFormat>
        <label>Codigo da Penalizacao</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Penalizacoes de Motorista</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>