force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Amount__c.field-meta.xml
<CustomField>
    <fullName>LT_Amount__c</fullName>
    <description>Valor do desconto ou multa.</description>
    <label>Valor</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>