force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Applied_By__c.field-meta.xml
<CustomField>
    <fullName>LT_Applied_By__c</fullName>
    <description>Usuario que aplicou a penalizacao.</description>
    <label>Aplicada Por</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Penalizacoes Aplicadas Por</relationshipLabel>
    <relationshipName>LT_Applied_By_Penalties</relationshipName>
    <type>Lookup</type>
</CustomField>