force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Applied_In_Manifest__c.field-meta.xml
<CustomField>
    <fullName>LT_Applied_In_Manifest__c</fullName>
    <description>Romaneio em que o desconto foi aplicado.</description>
    <label>Descontada no Romaneio</label>
    <referenceTo>LT_Manifest__c</referenceTo>
    <relationshipLabel>Penalizacoes Aplicadas</relationshipLabel>
    <relationshipName>LT_Applied_Penalties</relationshipName>
    <type>Lookup</type>
</CustomField>