force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Case__c.field-meta.xml
<CustomField>
    <fullName>LT_Case__c</fullName>
    <description>Chamado SAC que originou a penalizacao.</description>
    <label>Chamado de Origem</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Penalizacoes</relationshipLabel>
    <relationshipName>LT_Penalties</relationshipName>
    <type>Lookup</type>
</CustomField>