force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Contest_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Contest_Date__c</fullName>
    <description>Data em que o motorista contestou.</description>
    <label>Data da Contestacao</label>
    <type>Date</type>
</CustomField>