force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Contest_Outcome__c.field-meta.xml
<CustomField>
    <fullName>LT_Contest_Outcome__c</fullName>
    <description>Desfecho da contestacao do motorista.</description>
    <label>Resultado da Contestacao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Mantida</fullName>
            </value>
            <value>
                <fullName>Reduzida</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>