force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Contested__c.field-meta.xml
<CustomField>
    <fullName>LT_Contested__c</fullName>
    <description>Marcada quando o motorista contesta a penalizacao.</description>
    <label>Contestada</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>