force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Driver__c.field-meta.xml
<CustomField>
    <fullName>LT_Driver__c</fullName>
    <description>Motorista penalizado.</description>
    <label>Motorista</label>
    <referenceTo>LT_Driver__c</referenceTo>
    <relationshipLabel>Penalizacoes</relationshipLabel>
    <relationshipName>LT_Penalties</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>