force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Effective_Amount__c.field-meta.xml
<CustomField>
    <fullName>LT_Effective_Amount__c</fullName>
    <description>Valor realmente descontado apos a contestacao (Cancelada = 0, Reduzida = 50%).</description>
    <label>Valor Efetivo</label>
    <formula>CASE(TEXT(LT_Contest_Outcome__c), "Cancelada", 0, "Reduzida", BLANKVALUE(LT_Amount__c, 0) * 0.5, BLANKVALUE(LT_Amount__c, 0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>