force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Is_Financial__c.field-meta.xml
<CustomField>
    <fullName>LT_Is_Financial__c</fullName>
    <description>Verdadeiro para penalizacoes com valor a descontar.</description>
    <label>Penalizacao Financeira</label>
    <formula>OR(ISPICKVAL(LT_Penalty_Type__c, "Desconto por Extravio"), ISPICKVAL(LT_Penalty_Type__c, "Desconto por Avaria"), ISPICKVAL(LT_Penalty_Type__c, "Multa Contratual"))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>