force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Loss_Claim__c.field-meta.xml
<CustomField>
    <fullName>LT_Loss_Claim__c</fullName>
    <description>Extravio que originou a penalizacao.</description>
    <label>Extravio de Origem</label>
    <referenceTo>LT_Loss_Claim__c</referenceTo>
    <relationshipLabel>Penalizacoes</relationshipLabel>
    <relationshipName>LT_Penalties</relationshipName>
    <type>Lookup</type>
</CustomField>