force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Origin__c.field-meta.xml
<CustomField>
    <fullName>LT_Origin__c</fullName>
    <description>De onde partiu a penalizacao.</description>
    <label>Origem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Extravio</fullName>
            </value>
            <value>
                <fullName>Chamado SAC</fullName>
            </value>
            <value>
                <fullName>Ocorrencia Operacional</fullName>
            </value>
            <value>
                <fullName>Auditoria</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>