force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Penalty_Type__c.field-meta.xml
<CustomField>
    <fullName>LT_Penalty_Type__c</fullName>
    <description>Natureza da penalizacao aplicada ao motorista.</description>
    <label>Tipo de Penalizacao</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desconto por Extravio</fullName>
            </value>
            <value>
                <fullName>Desconto por Avaria</fullName>
            </value>
            <value>
                <fullName>Advertencia (Postura)</fullName>
            </value>
            <value>
                <fullName>Suspensao Temporaria</fullName>
            </value>
            <value>
                <fullName>Desligamento</fullName>
            </value>
            <value>
                <fullName>Multa Contratual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>