force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Reference_Date__c.field-meta.xml
<CustomField>
    <fullName>LT_Reference_Date__c</fullName>
    <description>Data do fato gerador da penalizacao.</description>
    <label>Data de Referencia</label>
    <required>true</required>
    <type>Date</type>
</CustomField>