force-app/main/default/objects/LT_Driver_Penalty__c/fields/LT_Status__c.field-meta.xml
<CustomField>
    <fullName>LT_Status__c</fullName>
    <description>Situacao da penalizacao.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registrada</fullName>
                <default>true</default>
                <label>Registrada</label>
            </value>
            <value>
                <fullName>Em Contestacao</fullName>
            </value>
            <value>
                <fullName>Confirmada</fullName>
            </value>
            <value>
                <fullName>Descontada</fullName>
            </value>
            <value>
                <fullName>Revertida</fullName>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>