force-app/main/default/objects/LT_Driver_Penalty__c/validationRules/LT_Penalty_Contested_Requires_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Penalty_Contested_Requires_Date</fullName>
    <active>true</active>
    <description>Penalizacao contestada exige a data da contestacao.</description>
    <errorConditionFormula>AND(LT_Contested__c, ISBLANK(LT_Contest_Date__c))</errorConditionFormula>
    <errorDisplayField>LT_Contest_Date__c</errorDisplayField>
    <errorMessage>Informe a Data da Contestacao.</errorMessage>
</ValidationRule>