force-app/main/default/objects/LT_Driver_Penalty__c/validationRules/LT_Penalty_Discounted_Requires_Manifest.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Penalty_Discounted_Requires_Manifest</fullName>
    <active>true</active>
    <description>Penalizacao Descontada exige o romaneio de aplicacao.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Descontada"), ISBLANK(LT_Applied_In_Manifest__c))</errorConditionFormula>
    <errorDisplayField>LT_Applied_In_Manifest__c</errorDisplayField>
    <errorMessage>Informe o romaneio em que o desconto foi aplicado.</errorMessage>
</ValidationRule>