force-app/main/default/objects/LT_Driver_Penalty__c/validationRules/LT_Penalty_Reverted_Requires_Contest.validationRule-meta.xml
<ValidationRule>
    <fullName>LT_Penalty_Reverted_Requires_Contest</fullName>
    <active>true</active>
    <description>Penalizacao Revertida exige contestacao com resultado.</description>
    <errorConditionFormula>AND(ISPICKVAL(LT_Status__c, "Revertida"), OR(NOT(LT_Contested__c), ISPICKVAL(LT_Contest_Outcome__c, "Pendente")))</errorConditionFormula>
    <errorDisplayField>LT_Status__c</errorDisplayField>
    <errorMessage>So e possivel reverter uma penalizacao contestada e julgada.</errorMessage>
</ValidationRule>