force-app/main/default/objects/LT_Driver_Penalty__c/listViews/A_Descontar.listView-meta.xml
<ListView>
    <fullName>A_Descontar</fullName>
    <columns>NAME</columns>
    <columns>LT_Driver__c</columns>
    <columns>LT_Penalty_Type__c</columns>
    <columns>LT_Effective_Amount__c</columns>
    <columns>LT_Reference_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Status__c</field>
        <operation>equals</operation>
        <value>Confirmada</value>
    </filters>
    <label>A Descontar</label>
</ListView>