force-app/main/default/objects/LT_Driver_Penalty__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LT_Driver__c</columns>
    <columns>LT_Penalty_Type__c</columns>
    <columns>LT_Origin__c</columns>
    <columns>LT_Status__c</columns>
    <columns>LT_Amount__c</columns>
    <columns>LT_Effective_Amount__c</columns>
    <columns>LT_Reference_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>