force-app/main/default/objects/LT_Driver_Penalty__c/listViews/Contestadas.listView-meta.xml
<ListView>
    <fullName>Contestadas</fullName>
    <columns>NAME</columns>
    <columns>LT_Driver__c</columns>
    <columns>LT_Penalty_Type__c</columns>
    <columns>LT_Amount__c</columns>
    <columns>LT_Contest_Date__c</columns>
    <columns>LT_Contest_Outcome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LT_Contested__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Contestadas</label>
</ListView>